[tool.poetry]
name = "nonebot-plugin-bing-chat"
version = "0.7.3"
description = "基于nonebot2的bing-chat软件"
license = "GPL-3.0-only"
authors = ["Harry <harry0259@163.com>"]
maintainers = ["Harry <harry0259@163.com>"]
readme = "README.md"
repository = "https://github.com/Harry-Jing/nonebot-plugin-bing-chat"
keywords = ["nonebot", "bot", "qq", "bing", "chatbot", "gpt"]
classifiers = [
  "Framework :: Pydantic",
  "Topic :: Communications",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: Chinese (Simplified)",
]
packages = [{ include = "nonebot_plugin_bing_chat" }]
include = ["nonebot_plugin_bing_chat/py.typed"]


[tool.poetry.dependencies]
python = "^3.10"
EdgeGPT = "^0.1.10.1"
nonebot-adapter-onebot = "^2.2.2"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-guild-patch = "^0.2.3"
nonebot-plugin-htmlrender = { version = "^0.2.0.3", optional = true }
nonebot2 = "^2.0.0rc3"
pydantic = "^1.10.6"


[tool.poetry.extras]
image = ["nonebot-plugin-htmlrender"]
all = ["nonebot-plugin-htmlrender"]


[tool.pyright]
include = ["nonebot_plugin_bing_chat"]
pythonVersion = "3.10"
typeCheckingMode = "strict"


[tool.black]
target-version = ["py310"]
skip-string-normalization = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
